deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentmycar
  namespace: default
  labels:
    app: rentmycar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rentmycar
  template:
    metadata:
      labels:
        app: rentmycar
    spec:
      containers:
      - name: rentmycar
        image: rentmycar:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 50
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 6
          timeoutSeconds: 3
        volumeMounts:
        - name: apache-config
          mountPath: /usr/local/apache2/conf/httpd.conf
          subPath: httpd.conf
      volumes:
      - name: apache-config
        configMap:
          name: apache-config
