ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rentmycar-ingressroute
  namespace: default
  labels:
    app: rentmycar
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rentmycar.localhost`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: rentmycar
          namespace: default
          port: 80
          scheme: http
          strategy: RoundRobin
          healthCheck:
            path: /
            interval: 10s
            timeout: 3s
            scheme: http
      middlewares:
        - name: default-retry
        - name: default-circuitbreaker
        - name: default-compress
        - name: default-buffering
        - name: dev-headers
    - match: Host(`rentmycar.framework.autopath.ai`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: rentmycar
          namespace: default
          port: 80
          scheme: http
          strategy: RoundRobin
          healthCheck:
            path: /
            interval: 10s
            timeout: 3s
            scheme: http
      middlewares:
        - name: default-retry
        - name: default-circuitbreaker
        - name: default-compress
        - name: default-buffering
        - name: default-headers
